--- a/configs/algorithm/daps.yaml
+++ b/configs/algorithm/daps.yaml
@@ -19,5 +19,5 @@ method:
   lgvd_config:
     num_steps: 100
     lr: 1e-4
-    tau: 0.01
+    tau: 1e-3 #0.01 #smaller = more likelihood
     lr_min_ratio: 0.01
