--- a/configs/algorithm/daps.yaml
+++ b/configs/algorithm/daps.yaml
@@ -10,8 +10,8 @@ method:
     timestep: 'poly-7'
 
   diffusion_scheduler_config:
-    num_steps: 5
-    sigma_min: 0.01
+    num_steps: 15
+    sigma_min: 1e-4
     sigma_final: 0
     schedule: 'linear'
     timestep: 'poly-7'
@@ -19,5 +19,5 @@ method:
   lgvd_config:
     num_steps: 100
     lr: 1e-4
-    tau: 1e-3 #0.01 #smaller = more likelihood
+    tau: 5e-4 #smaller = more likelihood
     lr_min_ratio: 0.01
